--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,7 +1,7 @@
 name: Go test
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  go-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -9,6 +9,25 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
-      - name: 'Create dummy directory to enable to build'
+      - name: 'Create a dummy file to enable to build'
         run: mkdir -p client/dist/assets && touch client/dist/assets/.dummy
       - run: make test
+  client-test:
+    defaults:
+      run:
+        working-directory: client
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - uses: actions/cache@v3
+        id: node_modules_cache_id
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+      - run: yarn install
+      - run: yarn test
