--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -18,7 +18,7 @@ jobs:
         working-directory: client
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@3
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
