--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,10 @@ jobs:
           node-version: 16
       - uses: actions/cache@v3
         id: node_modules_cache_id
-        env:
-          cache-name: cache-node-modules
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+          path: 'node_modules'
+          key: ${{ runner.os }}-build-client-node-modules-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
+      - run: yarn check:prettier
+      - run: yarn check:svelte
       - run: yarn test
