--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
+          cache-dependency-path: 'client/yarn.lock'
       - run: yarn install
       - run: yarn check:all
       - run: yarn test
