--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - uses: actions/cache@v3
-        id: node_modules_cache_id
-        with:
-          path: 'node_modules'
-          key: ${{ runner.os }}-build-client-node-modules-${{ hashFiles('**/yarn.lock') }}
+          cache: 'yarn'
+          cache-dependency-path: 'client/yarn.lock'
       - run: yarn install
       - run: yarn check:all
       - run: yarn test
