--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
           cache: true
       - name: 'Create a dummy file to enable to build'
         run: mkdir -p client/dist/assets && touch client/dist/assets/.dummy
+      - uses: golangci/golangci-lint-action@v3
       - run: make test
   client-test:
     defaults:
