--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.1",
     "@tsconfig/svelte": "^3.0.0",
+    "jest-environment-jsdom": "^29.0.3",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
+    "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
