Rename the name of DB object from todo to task to search Todo comments easily

--- a/docker/node/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/docker/node/hasura/metadata/databases/default/tables/public_users.yaml
@@ -2,12 +2,12 @@ table:
   name: users
   schema: public
 array_relationships:
-  - name: todos
+  - name: tasks
     using:
       manual_configuration:
         column_mapping:
           id: user_id
         insertion_order: null
         remote_table:
-          name: todos
+          name: tasks
           schema: public
